bg overflow fixed

--- a/src/Components/Background/Background.css
+++ b/src/Components/Background/Background.css
@@ -1,3 +1,7 @@
+#aboutbg::-webkit-scrollbar {
+  display: none;
+}
+
 #aboutbg {
   margin: 7rem auto;
   background: url("./Assets/bg1.svg");
@@ -9,10 +13,11 @@
   /* background-size: cover; */
   max-height: 100vh;
   overflow-y: scroll;
+  /* overflow: hidden; */
 }
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   display: none;
-}
+} */
 #about_data {
   position: relative;
   /* margin-top: 6rem; */
